Add the notebook updated

--- a/src/notebooks/model_training_modified.ipynb
+++ b/src/notebooks/model_training_modified.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,53 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "12:21:42, [INFO] PYTHONPATH: ['/Users/solene.leboucher/Desktop/DSBA/MLOps/dsba-platform/src/notebooks', '/Library/Frameworks/Python.framework/Versions/3.12/lib/python312.zip', '/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12', '/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/lib-dynload', '', '/Users/solene.leboucher/dsba-platform/.venv/lib/python3.12/site-packages', '/Users/solene.leboucher/dsba-platform/src', '/Users/solene.leboucher/Desktop/DSBA/MLOps/dsba-platform/src']\n",
-      "12:21:43, [INFO] Module dsba.preprocessing importé avec succès.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "import logging\n",
-    "\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "\n",
-    "src_path = Path('/Users/solene.leboucher/Desktop/DSBA/MLOps/dsba-platform/src').resolve()\n",
-    "if str(src_path) not in sys.path:\n",
-    "    sys.path.append(str(src_path))\n",
-    "logging.info(f\"PYTHONPATH: {sys.path}\")\n",
-    "\n",
-    "try:\n",
-    "    from dsba.preprocessing import split_dataframe\n",
-    "    logging.info(\"Module dsba.preprocessing importé avec succès.\")\n",
-    "except ModuleNotFoundError as e:\n",
-    "    logging.error(f\"Erreur d'importation du module: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/Users/solene.leboucher/Desktop/DSBA/MLOps/dsba-platform/src')\n",
-    "\n",
-    "# Maintenant tu peux importer ton module\n",
-    "from dsba.preprocessing import fillna_and_standardize\n"
+    "sys.path.append('/Users/solene.leboucher/Desktop/DSBA/MLOps/dsba-platform/src')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +287,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
