Add the modified notebook

--- a/src/notebooks/model_training_modified.ipynb
+++ b/src/notebooks/model_training_modified.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download the dataset (added)\n",
+    "# Download the dataset \n",
     "from dsba.data_ingestion.files import write_csv_to_path\n",
     "write_csv_to_path(titanic, \"/Users/solene.leboucher/Desktop/DSBA/MLOps/dsba-platform/models_registry/titanic.csv\")"
    ]
@@ -360,6 +360,7 @@
     }
    ],
    "source": [
+    "# Plot the correlation\n",
     "from dsba.preprocessing import preprocess_dataframe\n",
     "from dsba.preprocessing import plot_correlation\n",
     "\n",
@@ -386,6 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fill the NA and scale the data, for numeric columns \n",
     "from dsba.preprocessing import fillna_and_standardize\n",
     "titanic_train, titanic_test = fillna_and_standardize(titanic_train, titanic_test, target_column)"
    ]
@@ -425,6 +427,7 @@
     }
    ],
    "source": [
+    "# Train the logistic regression\n",
     "from dsba.model_training import train_logistic_regression\n",
     "clf2, metadata2 = train_logistic_regression(titanic_train, target_column, \"titanic_model_logistic_regression_grid_search\")"
    ]
@@ -504,6 +507,7 @@
     }
    ],
    "source": [
+    "# Evaluate the XGBoost model\n",
     "from dsba.model_evaluation import evaluate_classifier\n",
     "from dsba.model_evaluation import visualize_classification_evaluation\n",
     "\n",
@@ -538,6 +542,7 @@
     }
    ],
    "source": [
+    "# Evaluate the logistic regression\n",
     "model_evaluation2 = evaluate_classifier(clf2, target_column, titanic_test)\n",
     "visualize_classification_evaluation(model_evaluation2)"
    ]
